# easyapply

./: .flake8  .gitignore  .pre-commit-config.yaml  devenv.nix  flake.nix  pyproject.toml
.github/workflows/: ci.yml
doc/source/: conf.py  index.rst
easyapply/: __main__.py  pdf.py
easyapply/cli/: __init__.py
easyapply/pdf/: __init__.py
easyapply/themes/: __init__.py  filters.py  globals.py
tests/: test_filters.py
