[tool.poetry]
name = "easyapply"
version = "0.1.0"
description = "CVs generate from YAML."
authors = ["Fabian Köhler <me@fkoehler.org>"]
readme = "README.md"

[tool.poetry.scripts]
easyapply = "easyapply.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
pyyaml = "^6.0"
typer = { extras = ["all"], version = "^0.12.0" }
pybtex = "^0.24.0"
playwright = "^1.29.1"
beautifulsoup4 = "^4.11.1"
watchdog = "^4.0.0"
cairosvg = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
mypy = "^1.0"
isort = "^5.11.4"
black = "^24.0.0"
types-pyyaml = "^6.0.12.2"
types-beautifulsoup4 = "^4.11.6.2"

[tool.ruff.lint]
preview = true
select = ["E", "F", "B", "N", "I", "ANN", "UP", "PERF", "FURB"]
ignore = ["F722", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
