[project]
name = "easyapply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "cairosvg>=2.7.1",
    "jinja2>=3.1.4",
    "playwright>=1.47.0",
    "pybtex>=0.24.0",
    "pyyaml>=6.0.2",
    "typer>=0.12.5",
    "watchdog>=5.0.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.7",
    "types-beautifulsoup4>=4.12.0.20240907",
    "types-pyyaml>=6.0.12.20240917",
]
