[project]
name = "easyapply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "cairosvg>=2.7.1",
  "jinja2>=3.1.4",
  "playwright>=1.47.0",
  "pybtex>=0.24.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "setuptools>=75.1.0",
  "typer>=0.12.5",
  "watchdog>=5.0.2",
]

[project.scripts]
easyapply = "easyapply.cli:main"

[tool.uv]
package = true
dev-dependencies = [
  "pytest>=8.3.3",
  "ruff>=0.6.7",
  "types-beautifulsoup4>=4.12.0.20240907",
  "types-pyyaml>=6.0.12.20240917",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "U"]
